[gd_scene load_steps=7 format=3 uid="uid://oi2c0skb55uc"]

[ext_resource type="PackedScene" uid="uid://dksgapf1j43sv" path="res://assets/turrets/turretFixed.glb" id="1_5legn"]
[ext_resource type="Script" path="res://scenes/turrets/turret_one.gd" id="2_6e054"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tf538"]
radius = 6.75068

[sub_resource type="Animation" id="Animation_qlde5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("turret_single/turret:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.035, 0.00111803)]
}

[sub_resource type="Animation" id="Animation_ymajo"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("turret_single/turret:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.035, 0.00111803), Vector3(0, 0.035, 0.01), Vector3(0, 0.035, 0.00111803)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7vd0"]
_data = {
"RESET": SubResource("Animation_qlde5"),
"shoot": SubResource("Animation_ymajo")
}

[node name="turretFixed" instance=ExtResource("1_5legn")]
script = ExtResource("2_6e054")

[node name="turret" parent="turret_single" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.035, 0.00111803)

[node name="LeftBarrel" type="RayCast3D" parent="turret_single/turret" index="2"]
transform = Transform3D(-0.1, 0, 8.74228e-09, 0, 0.1, 0, -8.74228e-09, 0, -0.1, 0.00991771, 0.0150886, 0.0432025)
target_position = Vector3(0, 0, -6)

[node name="RightBarrel" type="RayCast3D" parent="turret_single/turret" index="3"]
transform = Transform3D(-0.1, 0, 8.74228e-09, 0, 0.1, 0, -8.74228e-09, 0, -0.1, -0.011487, 0.0148862, 0.0436293)
target_position = Vector3(0, 0, -6)

[node name="ShootTimer" type="Timer" parent="." index="1"]
wait_time = 0.1

[node name="DetectionArea" type="Area3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea" index="0"]
shape = SubResource("CylinderShape3D_tf538")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_c7vd0")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
